--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -36,7 +36,13 @@
     position: absolute;
     bottom: 0;
     margin-left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+}
+.btn-cart .btn-text{
+    margin-right: 8px;
 }
 .btn-cart:hover{
     background-color: chocolate;
